--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a class="nav-link" href="#about">ABOUT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="#contact">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -122,7 +122,7 @@
       </section>
     </main>
     <footer>
-      <div class="conatiner-fluid p-0">
+      <div class="conatiner-fluid p-0 " id="contact">
         <div class="row text-left">
           <div class="col-md-5 col-sm-5">
             <h4 class="text-light">Address</h4>
